Dibuat menggunakan Colab

--- a/SC-sesi1.ipynb
+++ b/SC-sesi1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIpqBbHvmpteMuvlMc1xgz",
+      "authorship_tag": "ABX9TyMWAMIM3gdRN8Oqwa7oSYP7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -583,7 +583,7 @@
         "        username = input(\"Masukkan Username : \")\n",
         "        password = input(\"Masukkan Password : \")\n",
         "        if password == \"Admin123\":\n",
-        "            print(\"Login Berhasil!, Selamat Datang\", username)\n",
+        "            print(\"Login Berhasil, Selamat datang\", username)\n",
         "            break\n",
         "        else:\n",
         "            print(\"Password Salah !.\\n\")\n",
@@ -624,7 +624,7 @@
         "\n",
         "def main():\n",
         "    login()\n",
-        "    name = input(\"Masukkan nama siswa: \")\n",
+        "    name = input(\"\\nMasukkan nama siswa: \")\n",
         "    UAS = valid_score(\"Masukkan nilai UAS (0-100): \")\n",
         "    UTS = valid_score(\"Masukkan nilai UTS (0-100): \")\n",
         "    ASG = valid_score(\"Masukkan nilai Assignment (0-100): \")\n",
@@ -645,21 +645,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wR1UG2dGtQwB",
-        "outputId": "55e3493a-5c9b-4011-90df-6da3e635af31"
+        "outputId": "b2e999fe-539d-4dd3-e8dc-d8b5a658c5eb"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Masukkan Username : OKI J\n",
+            "Masukkan Username : Donji\n",
             "Masukkan Password : Admin123\n",
-            "Login Berhasil!, Selamat Datang OKI J\n",
+            "Login Berhasil, Selamat datang Donji\n",
+            "\n",
             "Masukkan nama siswa: Aya\n",
-            "Masukkan nilai UAS (0-100): 90\n",
-            "Masukkan nilai UTS (0-100): 85\n",
-            "Masukkan nilai Assignment (0-100): 80\n",
+            "Masukkan nilai UAS (0-100): 85\n",
+            "Masukkan nilai UTS (0-100): 90\n",
+            "Masukkan nilai Assignment (0-100): 85\n",
             "\n",
             "============================================\n",
             "Hasil perolehan nilai Aya\n",
